# small3d-boilerplate

./: .gitignore  README.md  appveyor.yml  conanfile.py
android/: .gitignore  settings.gradle
android/app/: CMakeLists.txt  CMakeListsVulkan.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/sample/: Game.java
android/app/src/main/res/values/: strings.xml
ios-opengles/game/: ViewController.m
ios/game/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
ios/game.xcodeproj/: project.pbxproj
ios/game.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/game.xcodeproj/xcshareddata/xcschemes/: islet-hell-ios.xcscheme
resources/: boat-battery.glb  boat.glb  map1.txt  map10.txt  map2.txt  map3.txt  map4.txt  map5.txt  map6.txt  map7.txt  map8.txt  map9.txt  missile.glb
src/: CMakeLists.txt  Game.cpp  Game.hpp  GameLoopAndInput.cpp  GameLoopAndInput.hpp  Global.hpp  KeyInput.hpp  README  main.cpp  resources.rc
